--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="/vite.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- link css here only when ccs is not imported in js yet -->
-    <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <title>Hello</title>
+    <meta name="description" content="jeu train solo">
+    <link rel="stylesheet" href="/css/style.css"> 
+    <title>Jeu Train</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- <script src="./js/app.js" type="module"></script> -->
+    <main id="yellow">
+      <section id="cube">
+        <div id="top">
+          <h1 id="bigtitle">JEU DU Train</h1>
+        </div>
+        <div id="middle"></div>
+        <div id="bottom"></div>
+        <div id=""></div>
+        <div id=""></div>
+      </section>
+    </main>
+
+ <script src="./js/app.js" type="module"></script> 
   </body>
 </html>
